--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 7.6rem;
   box-shadow: $shadow-dark;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 9999;
 }
